<resources>
    <string name="app_name">Healthy Weight</string>

    <string name="app_logo">App Logo</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button_text_enter">Login</string>
    <string name="button_text_exit">Log out</string>
    <string name="not_yet_with_us">Not registered yet?</string>
    <string name="sign_up_now">Register Now!</string>
    <string name="man_image">Man Image</string>
    <string name="woman_image">Woman Image</string>
    <string name="your_gender">Your Gender</string>
    <string name="your_height">Your Height</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_birthday">Your Birthday</string>
    <string name="your_personal_information">Your Personal Information</string>
    <string name="next">Next</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="error_text">*Please do not leave blank</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="profile_photo">Profile Photo</string>

    <string name="body_mass_index">Body Mass Index</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>